# dotfiles

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.claude/skills/claude-code-render/: SKILL.md
.claude/skills/coding-aws/: SKILL.md
.claude/skills/coding-azure/: SKILL.md
.claude/skills/coding-discord-bot-architect/: SKILL.md
.claude/skills/coding-gcp/: SKILL.md
.claude/skills/coding-gish/: SKILL.md
.claude/skills/coding-github/: SKILL.md
.claude/skills/coding-github-pr-workflow/: SKILL.md
.claude/skills/coding-go/: SKILL.md
.claude/skills/coding-javascript/: SKILL.md
.claude/skills/coding-javascript-react/: SKILL.md
.coily/: coily.yaml
.github/workflows/: release-please.yml
agentic_os/: __init__.py  check_catalog_trifecta.py  check_commit_closes_issue.py  check_conventional_commit.py  check_dead_links.py  strip_warp_thrash.py  validate_skills.py
brew/: Brewfile
docs/: FEATURES.md
docs/skill-discipline/: README.md  authoring-walkthrough.md  handbook.md
hammerspoon/: init.lua
nu/: config.nu  env.nu  ssm-env.nu
nu/hosts/: linux.nu  macos.nu  windows.nu
scripts/: apply-agentic-os-hooks.py  audit-pre-commit-coverage.py  check-aws-config.py  check-catalog-block.py  check-catalog-doc-size.py  gpg-doctor.nu  gpg-ssm  gpg-ssm.cmd  verbatim-echo.sh
warp/: settings.toml
warp/tab_configs/: startup_config.toml
warp/themes/: coilysiren-sombra-wallpaper.yaml
wezterm/: wezterm.lua
zsh/: config.zsh  env.zsh  ssm-env.zsh  zshrc
zsh/hosts/: linux.zsh  macos.zsh  windows.zsh
(+63 files in other folders)
