[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-os"
version = "0.1.0"
description = "Cross-repo pre-commit hooks and operating utilities for coilysiren/* repos: catalog-trifecta, catalog-doc-size, catalog-block, skill-conventions, dead-cross-links, commit-closes-issue."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]
keywords = ["coilysiren", "pre-commit", "skill-discipline", "catalog", "validator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/coilysiren/agentic-os"
Issues = "https://github.com/coilysiren/agentic-os/issues"

[project.scripts]
validate-skills = "agentic_os.validate_skills:main"
check-dead-links = "agentic_os.check_dead_links:main"
check-commit-closes-issue = "agentic_os.check_commit_closes_issue:main"
check-catalog-block = "agentic_os.check_catalog_block:main"
check-catalog-doc-size = "agentic_os.check_catalog_doc_size:main"
check-catalog-trifecta = "agentic_os.check_catalog_trifecta:main"
check-aws-config = "agentic_os.check_aws_config:main"

[tool.setuptools.packages.find]
include = ["agentic_os*"]
